done vercel setting

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
     "version": 2,
-    "builds": [
-    {
-    "src": "resumeproject/wsgi.py",
+    "builds":[
+    {"src": "resumeproject/wsgi.py",
     "use": "@vercel/python",
-    "config": { "maxLambdaSize": "15mb", "runtime": "python3.11.3" }
+    "config": { "maxxLambdaSize": "15", "runtime": "python3.9"}
     },
     {
     "src": "build_files.sh",
@@ -13,15 +12,14 @@
     "distDir": "staticfiles_build"
     }
     }
-    ],
-    "routes": [
+],
+"routes": [
     {
     "src": "/static/(.*)",
     "dest": "/static/$1"
     },
     {
-    "src": "/(.*)",
-    "dest": "devntechno/wsgi.py"
+    "src":"/(.*)",
+    "dest": "poll/wsgi.py"
     }
-    ]
-    }
+] }
