--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "builds":[
-    {"src": "resumeproject/wsgi.py",
+    {"src": "resumeproject/resumeproject/wsgi.py",
     "use": "@vercel/python",
     "config": { "maxxLambdaSize": "15", "runtime": "python3.11.3"}
     },
