--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
     "version": 2,
     "builds":[
-    {"src": "resumeproject/resumeproject/wsgi.py",
+    {"src": "resumeproject/wsgi.py",
     "use": "@vercel/python",
-    "config": { "maxxLambdaSize": "15", "runtime": "python3.11.3"}
+    "config": { "maxxLambdaSize": "15", "runtime": "python3.11"}
     },
     
     {
